<resources>
    <string name="app_name">Współogarniacz</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up_text">ZAREJESTRUJ</string>
    <string name="sign_in_text">ZALOGUJ</string>
    <string name="sign_up_chooser_text">Nie masz konta?</string>
    <string name="sign_in_chooser_text">Masz już konto?</string>
    <string name="email">E-mail</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="reset_password_text">Przypomnij hasło</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="invite_to_group_text">Zaproś do grupy</string>
    <string name="member_text">W GRUPIE</string>
    <string name="invite_text">ZAPROŚ</string>
    <string name="member_waiting_text">OCZEKUJE \nNA PRZYJECIE</string>
    <string name="member_pending_text">WYSLANO \nZAPROSZENIE</string>
    <string name="modified_format_text">Zmodyfikowano %1$s przez &lt;b>%2$s&lt;/b></string>
    <string name="search_member_hint_text">Wpisz nazwę użytkownika lub email</string>
    <string name="search_member_invite_text">Zapros:</string>
</resources>
