...
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:foreground="?android:selectableItemBackground"
        android:textColor="@color/colorAccent"
        android:text="@string/reset_password_text"
...
